# WALi-OpenNWA

./: .gitignore  CMakeLists.txt  README.md  README.rst  TODO.txt  conanfile.py
Examples/GenKill/: GenKillTransformer_T.hpp
Examples/GenKill/UninitVar/: README.txt  UninitVar.cpp  UninitVarSaturationExample.cpp
Examples/ProgAnalysis/: ProgAnalysis.cpp
Source/: CMakeLists.txt
Source/wali/: CMakeLists.txt
Source/wali/include/wali/: Countable.hpp  IMergeFn.hpp  Key.hpp  KeySource.hpp  KeySpace.hpp  LLVMValueSource.hpp  LongestSaturatingPathSemiring.hpp  MergeFn.hpp  Progress.hpp  SemElem.hpp  SemElemTensor.hpp  ShortestPathSemiring.hpp
Source/wali/include/wali/details/: PriorityWorklist.boost_heap.hpp  PriorityWorklist.multiset.hpp
Source/wali/include/wali/domains/: BiDomain.hpp  KeyedSemElemSet.hpp  ReversedSemElem.hpp  SemElemSet.hpp  TraceSplitSemElem.hpp
Source/wali/include/wali/graph/: Functional.hpp  GraphCommon.hpp  InterGraph.hpp  IntraGraph.hpp  RegExp.hpp
Source/wali/include/wali/regex/: Regex.hpp
Source/wali/include/wali/wfa/: DecoratorTrans.hpp  ITrans.hpp  State.hpp  Trans.hpp  WFA.hpp
Source/wali/include/wali/witness/: CalculatingVisitor.hpp  VisitorDot.hpp  VisitorPrinter.hpp  Witness.hpp  WitnessLengthWorklist.hpp  WitnessMergeFn.hpp
Source/wali/include/wali/wpds/: DebugWPDS.hpp  Rule.hpp  RuleFunctor.hpp  WPDS.hpp
Source/wali/include/wali/wpds/ewpds/: ERule.hpp  EWPDS.hpp
Source/wali/include/wali/wpds/fwpds/: FWPDS.hpp  SWPDS.hpp
Source/wali/include/walilib/: CMakeLists.txt
Source/wali/lib/: CMakeLists.txt  IMergeFn.cpp  Key.cpp  KeyPairSource.cpp  KeySetSource.cpp  KeySpace.cpp  LLVMValueSource.cpp  LongestSaturatingPathSemiring.cpp  MergeFn.cpp  RankedWorklist.cpp  Reach.cpp  SemElem.cpp  SemElemPair.cpp  ShortestPathWorklist.cpp
Source/wali/lib/details/: PriorityWorklist.boost_heap.cpp
Source/wali/lib/graph/: Functional.cpp  InterGraph.cpp  IntraGraph.cpp  RegExp.cpp  SummaryGraph.cpp
Source/wali/lib/regex/: Concat.cpp  Regex.cpp  Star.cpp  Union.cpp
Source/wali/lib/util/: ParseArgv.cpp  StringUtils.cpp
Source/wali/lib/util/details/: Partition.cpp
Source/wali/lib/wfa/: State.cpp  WFA-eclose.cpp  WFA-path_summary.cpp  WFA.cpp
Source/wali/lib/wfa/epr/: EPA.cpp
Source/wali/lib/witness/: VisitorDot.cpp  Witness.cpp  WitnessMergeFn.cpp  WitnessWrapper.cpp
Source/wali/lib/wpds/: DebugWPDS.cpp  RuleFunctor.cpp  WPDS.cpp
Source/wali/lib/wpds/ewpds/: ERule.cpp  ETrans.cpp  EWPDS.cpp
Source/wali/lib/wpds/fwpds/: FWPDS.cpp  LazyTrans.cpp  SWPDS.cpp
test_package/: conanfile.py
