cmake_minimum_required (VERSION 3.1.2)

project (wali)
set(CMAKE_PROJECT_NAME "wali")

if(NOT DEFINED CMAKE_EXPORT_COMPILE_COMMANDS)
    set(CMAKE_EXPORT_COMPILE_COMMANDS YES)
endif(NOT DEFINED CMAKE_EXPORT_COMPILE_COMMANDS)
if(NOT DEFINED CMAKE_CXX_STANDARD)
set(CMAKE_CXX_STANDARD 14)
endif(NOT DEFINED CMAKE_CXX_STANDARD)
if(NOT DEFINED CMAKE_CXX_STANDARD_REQUIRED)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif(NOT DEFINED CMAKE_CXX_STANDARD_REQUIRED)
if(NOT DEFINED CMAKE_CXX_FLAGS)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
endif(NOT DEFINED CMAKE_CXX_FLAGS)
if(NOT DEFINED CMAKE_CXX_EXTENSIONS)
set(CMAKE_CXX_EXTENSIONS OFF)
endif(NOT DEFINED CMAKE_CXX_EXTENSIONS)

# setup conan for dependecy resolution
if (EXISTS ${CMAKE_BINARY_DIR}/conan_paths.cmake)
  set(CONAN ON)
  include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
  find_package(llvm-core 12 REQUIRED)
else()
  set(CONAN OFF)
  find_package(LLVM 12 REQUIRED)
endif()
message("[CMakeLists] Conan usage: " ${CONAN})

add_subdirectory(Source)
